# array-dsl-benchmarks

./: .gitignore  .gitmodules  .hsbencher_fusion_config.sh  .run_benchmarks.sh  Makefile  README.md  run_benchmark.cabal  run_benchmark.hs
OpenAcc/: .jenkins_script.sh  run-openacc-benchmark.cabal  run-openacc-benchmark.hs  run-openacc-benchmark.sh
OpenAcc/blackscholes/: Makefile  blackscholes.c
OpenAcc/nbody/: .gitignore  Makefile  nbody.c
accelerate/: mandel  run-accelerate-benchmark.cabal  run-accelerate-benchmark.hs  run-accelerate-benchmark.sh
accelerate/blackscholes/: BlackScholes.hs
accelerate/blackscholes/1gpu/: blackscholes-1gpu.cabal
accelerate/blackscholes/2gpu/: blackscholes-2gpu.cabal
accelerate/blackscholes/cilk/: blackscholes-cilk.cabal  nbody-cilk.cabal
accelerate/blackscholes/common/: Blackscholes.hs  Blackscholes_new.hs  Blackscholes_nofold.hs  Blackscholes_wfold.hs  Main.hs
accelerate/blackscholes/cpugpu/: blackscholes-cpugpu.cabal
accelerate/blackscholes/cpugpugpu/: blackscholes-cpugpugpu.cabal
accelerate/blackscholes/cuda/: blackscholes-cuda.cabal  nbody-cuda.cabal
accelerate/blackscholes/fission1/: blackscholes-fission1.cabal  nbody-fission1.cabal
accelerate/blackscholes/fission2/: blackscholes-fission2.cabal
accelerate/blackscholes/seq_c/: blackscholes-seq-c.cabal
accelerate/blackscholes/spmd1/: blackscholes-spmd1.cabal
accelerate/blackscholes/spmd2/: blackscholes-spmd2.cabal  nbody-spmd2.cabal
accelerate/blackscholes/testing/: blackscholes-testing.cabal
accelerate/blackscholes_temp/common/: Blackscholes.hs
accelerate/blackscholes_temp/seq_c/: blackscholes-seq-c.cabal
accelerate/common/: RandomArray.hs  gen_variants.sh
accelerate/dotprod_iota/: Dotprod_iota.hs  Makefile
accelerate/dotprod_iota/2gpu/: dotprod-2gpu.cabal  dotprod-cilk.cabal
accelerate/dotprod_iota/cilk/: dotprod-cilk.cabal
accelerate/dotprod_iota/common/: Dotprod_iota.hs
accelerate/dotprod_iota/cpugpu/: dotprod-cilk.cabal
accelerate/dotprod_iota/cuda/: dotprod-2gpu.cabal
accelerate/dotprod_iota/fission1/: dotprod-cilk.cabal
accelerate/dotprod_iota/fission2/: dotprod-fission2.cabal
accelerate/dotprod_iota/seq_c/: dotprod-seq-c.cabal
accelerate/dotprod_iota/spmd1/: dotprod-cilk.cabal
accelerate/dotprod_iota/spmd2/: dotprod-spmd2.cabal
accelerate/kmeans/1gpu/: kmeans-1gpu.cabal
accelerate/kmeans/2gpu/: kmeans-2gpu.cabal
accelerate/kmeans/cilk/: kmeans-cilk.cabal
accelerate/kmeans/common/: Kmeans.hs  Main.hs  Setup.hs
accelerate/kmeans/cpugpu/: Setup.hs  kmeans-cpugpu.cabal
accelerate/kmeans/cuda/: kmeans-cuda.cabal
accelerate/kmeans/points/: GenSamples.hs  Makefile  gen-samples.cabal
accelerate/kmeans/spmd2/: kmeans-spmd2.cabal
accelerate/localsearch/: gen_variants.sh
accelerate/localsearch/2gpu/: localsearch-2gpu.cabal
accelerate/localsearch/cilk/: localsearch-cilk.cabal
accelerate/localsearch/common/: Main.hs
accelerate/localsearch/cpugpu/: localsearch-cpugpu.cabal
accelerate/localsearch/cuda/: localsearch-cuda.cabal
accelerate/localsearch/fission1/: localsearch-fission1.cabal
accelerate/localsearch/fission2/: localsearch-fission2.cabal
accelerate/localsearch/seq_c/: localsearch-seqc.cabal
accelerate/localsearch/spmd1/: localsearch-spmd1.cabal
accelerate/localsearch/spmd2/: Main.hs  localsearch-spmd2.cabal
accelerate/mandelbrot/: Config.hs  Main.hs
accelerate/mandelbrot/2gpu/: mandel-2gpu.cabal
accelerate/mandelbrot/cilk/: mandel-cilk.cabal
accelerate/mandelbrot/common/: Config.hs  Main.hs  Mandel.hs  MandelFixed.hs  World.hs
accelerate/mandelbrot/cpugpu/: mandel-cpugpu.cabal
accelerate/mandelbrot/cuda/: mandel-cuda.cabal
accelerate/mandelbrot/fission1/: mandel-fission1.cabal
accelerate/mandelbrot/fission2/: mandel-fission2.cabal
accelerate/mandelbrot/seq_c/: mandel-seqc.cabal
accelerate/mandelbrot/spmd1/: mandel-spmd1.cabal
accelerate/mandelbrot/spmd2/: mandel-spmd2.cabal
accelerate/naive_mmult/common/: MMult.hs
accelerate/nbody/: DEVLOG.md  DEVLOG.txt  Main.hs  Makefile  inputGenerator
accelerate/nbody/1gpu/: nbody-1gpu.cabal
accelerate/nbody/2gpu/: Setup.hs  nbody-2gpu.cabal
accelerate/nbody/Common/: Body.hs  Type.hs  Util.hs
accelerate/nbody/Solver/: Naive.hs
accelerate/nbody/cilk/: nbody-cilk.cabal
accelerate/nbody/common/: IO.hs  Main.hs  Setup.hs
accelerate/nbody/cpugpu/: nbody-cpugpu.cabal
accelerate/nbody/cuda/: nbody-cuda.cabal
accelerate/nbody/fission1/: nbody-fission1.cabal
accelerate/nbody/fission2/: nbody-fission2.cabal
accelerate/nbody/makefile_based/: Main.hs  NewMain.hs  SPMD.hs
accelerate/nbody/points/: Makefile
accelerate/nbody/seq_c/: nbody-seq-c.cabal
accelerate/nbody/spmd1/: nbody-spmd1.cabal
accelerate/nbody/spmd2/: Main.hs  nbody-spmd2.cabal
accelerate/nbody_plusplus/2gpu/: Common  nbody_plusplus-2gpu.cabal
accelerate/nbody_plusplus/cpugpu/: nbody_plusplus-cpugpu.cabal
accelerate/nbody_plusplus/cuda/: nbody_plusplus-cuda.cabal
accelerate/nbody_plusplus/fission2/: nbody_plusplus-fission2.cabal
accelerate/nbody_plusplus/makefile_based/: Config.hs  DEVLOG.md  Main.hs  Makefile
accelerate/nbody_plusplus/spmd1/: nbody_plusplus-spmd1.cabal
accelerate/nbody_temp/common/: Main.hs  Makefile
accelerate/nbody_temp/cpugpu/: nbody-cpugpu.cabal
accelerate/radix/: Makefile  Radix.hs
accelerate/radix/cuda/: radix-cuda.cabal
accelerate/radix/seq_c/: radix-seq-c.cabal
accelerate/reduce/common/: RandomArr.hs  Reduce.hs
accelerate/reduce/cuda/: reduce-cuda.cabal
accelerate/saxpy/cilk/: saxpy-cilk.cabal
accelerate/saxpy/common/: SAXPY.hs
accelerate/saxpy/cuda/: saxpy-cuda.cabal
accelerate/saxpy/seq_c/: saxpy-seq-c.cabal
accelerate/scale_flops/cilk/: scaleFlops-cilk.cabal
accelerate/scale_flops/common/: Main.hs
accelerate/scale_flops/cuda/: scaleFlops-cuda.cabal
accelerate/scale_flops/seq_c/: scaleFlops-seq-c.cabal
accelerate/scale_flops2/cilk/: cilk.cabal
accelerate/scale_flops2/common/: Main.hs
accelerate/smvm/: Makefile  README  Random.hs  SPMD.hs  smvm.hs
accelerate/smvm/common/: smvm.hs
(+50 files in other folders)
