
-- A portable way to build the benchmark script/executable itself.

name:                run-accelerate-benchmark
version:             0.0.1
build-type:          Simple
-- We force a recent version to make sure we have sandboxes:
cabal-version:       >=1.18

Executable run-accelerate-benchmark
    Main-is: run_benchmark.hs
    Build-depends: base >= 4.6, containers >= 0.5,
                   GenericPretty >= 1.2.1,
                   hsbencher >= 1.8,
                   hsbencher-fusion >= 0.1
    ghc-options: -threaded
    default-language:  Haskell2010
