Name:                blackscholes-cpugpu
Version:             0.0.0.1
Build-type:          Simple
Cabal-version:       >=1.10

Executable bench-blackscholes-cpugpu
    Default-Language:    Haskell2010
    main-is:    Blackscholes_new.hs
    hs-source-dirs: ../common/ ../../common    
    ghc-options: -O2 -threaded -rtsopts 
    cpp-options: -DACCBACKEND=Data.Array.Accelerate.Multi_CPUGPU
    build-depends: base >= 4.6
                 , bytestring >= 0.10, time, array >= 0.4
                 , bytestring-lexing >= 0.4
                 , accelerate-backend-kit >= 0.15
                 , accelerate-multidev    >= 0.15.0.1
                 , accelerate             >= 0.15
                 , mwc-random, vector >= 0.10
