Name:                blackscholes-fission1
Version:             0.0.0.1
Build-type:          Simple
Cabal-version:       >=1.10

Executable bench-blackscholes-fission1
    Default-Language:    Haskell2010
    main-is:    Main.hs
    hs-source-dirs: ../common
    ghc-options: -O2 -threaded -rtsopts 
    cpp-options: -DACCBACKEND=Data.Array.Accelerate.FissionExampleBackend
    build-depends: base >= 4.6
                 , bytestring >= 0.10, time, array >= 0.4
                 , bytestring-lexing >= 0.4
                 , accelerate-backend-kit >= 0.13.0.99
                 , accelerate-icc-opencl  >= 0.13.0.99
                 , accelerate-multidev    >= 0.13.0.99
                 , accelerate             >= 0.13.0.99
                 , mwc-random, vector >= 0.10
