name:                   kmeans-1gpu
version:                0.1.0.0
Build-type:             Custom
cabal-version:          >=1.10

executable kmeans-1gpu
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       ../common
  ghc-options:          -O2 -threaded -rtsopts
  cpp-options:          -DACCBACKEND=Data.Array.Accelerate.Multi_1GPU
  cpp-options:          -DEXTRAINITCUDA
  build-depends:
        base                            >= 4.7 && <4.8
        , accelerate-backend-kit        >= 0.15
        , accelerate-multidev           >= 0.15.1
        , accelerate                    >= 0.15
        , binary
        , cuda
        , directory
        , time

