name:                   gen-samples
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

executable gen-samples
  default-language:     Haskell2010
  main-is:              GenSamples.hs
  build-depends:        base, array, binary, random, normaldistribution
  ghc-options:          -O2 -Wall

