Name:                nbody-spmd2
Version:             0.0.0.1
Synopsis:            NBody benchmark running with an SPMD backend.
Build-type:          Custom
Cabal-version:       >=1.10

Executable bench-nbody-spmd2
    Default-Language:    Haskell2010
    main-is:    Main.hs
    ghc-options: -O2 -threaded -rtsopts 
    cpp-options: -DACCBACKEND=Data.Array.Accelerate.SPMD_2wayC2
    build-depends: base >= 4.6
                 , bytestring >= 0.10, time, array >= 0.4
                 , bytestring-lexing >= 0.4
                 , accelerate-backend-kit >= 0.13.0.99
                 , accelerate-multidev    >= 0.13.0.99
                 , accelerate             >= 0.13.0.99
